--- a/fe/tsconfig.json
+++ b/fe/tsconfig.json
@@ -7,9 +7,15 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "sourceMap": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "outDir": "dist",
     "moduleResolution": "node",
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "paths": {
+      "@/*": [
+        "./fe/src/*.ts"
+      ]
+    }
+  },
 }
