--- a/fe/package.json
+++ b/fe/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^5.1.2",
+    "axios": "^1.7.5",
     "electron": "32.0.1",
     "element-plus": "^2.8.1",
     "eslint": "^8.57.0",
