--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,27 @@
+altgraph==0.17.4
 annotated-types==0.7.0
 anyio==4.4.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
+docutils==0.21.2
 fastapi==0.112.2
+flit==3.9.0
+flit_core==3.9.0
 h11==0.14.0
 idna==3.8
+macholib==1.16.3
+packaging==24.1
 pydantic==2.8.2
 pydantic_core==2.20.1
+pyinstaller==6.10.0
+pyinstaller-hooks-contrib==2024.8
+pyzzz @ file:///Users/guoyingzhong/workspace/pyzzz_project
+requests==2.32.3
+setuptools==74.0.0
 sniffio==1.3.1
 starlette==0.38.2
+tomli_w==1.0.0
 typing_extensions==4.12.2
+urllib3==2.2.2
 uvicorn==0.30.6
